--- a/templates/not_found.html
+++ b/templates/not_found.html
@@ -1,11 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Not Found Page</title>
-</head>
-<body>
-    Not Found Page
-</body>
-</html>
+{% extends 'base.html' %}
+
+
+{% block title %}Page not found{% endblock title %}
+
+{% block body %}
+    
+{% endblock body %}
