--- a/templates/patient.html
+++ b/templates/patient.html
@@ -1,11 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Patient page</title>
-</head>
-<body>
-    Patient page
-</body>
-</html>
+{% extends 'base.html' %}
+
+
+{% block title %}Patient{% endblock title %}
+
+{% block body %}
+    
+{% endblock body %}
