--- a/templates/doctor.html
+++ b/templates/doctor.html
@@ -1,11 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Doctor page</title>
-</head>
-<body>
-    Doctor page
-</body>
-</html>
+{% extends 'base.html' %}
+
+
+{% block title %}Doctor{% endblock title %}
+
+{% block body %}
+    
+{% endblock body %}
