--- a/templates/not_found.html
+++ b/templates/not_found.html
@@ -1,8 +1,12 @@
-{% extends 'base.html' %}
-
-
-{% block title %}Page not found{% endblock title %}
-
-{% block body %}
-    
-{% endblock body %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Page Not Found</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+</head>
+<body>
+    <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExYzAwZHA4OG4xNWpydnh5YzhiOWE1MWNzMXM0cnM4MTBnOWJhNTZoaiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/YyKPbc5OOTSQE/giphy.gif" alt="Page Not Found" allowfullscreen class="img-fluid full-screen">
+</body>
+</html>
