--- a/templates/base.html
+++ b/templates/base.html
@@ -19,17 +19,63 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mx-auto ">
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="/">Home</a>
+                        <a class="nav-link" aria-current="page" href="{{ url_for('home_page') }}">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="/facilities">Hospitals</a>
+                        <a class="nav-link" aria-current="page" href="{{ url_for('home_page') }}">Hospitals</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="/about">About Us</a>
+                        <a class="nav-link" aria-current="page" href="{{ url_for('home_page') }}">About Us</a>
+                    </li>
+                    {% if user.role == "reception" %}
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="{{ url_for('home_page') }}">New Patient</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/programmes">Programmes</a>
+                        <a class="nav-link" aria-current="page" href="{{ url_for('home_page') }}">Existing Patient</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="{{ url_for('home_page') }}">Appointments</a>
+                    </li>
+                    {% endif %}
+                    {% if user.role == "doctor" %}
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="{{ url_for('home_page') }}">AI-ML</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="{{ url_for('home_page') }}">Speech-To-Text</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="{{ url_for('home_page') }}">Text Scanner</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="{{ url_for('home_page') }}">Form</a>
+                    </li>
+                    {% endif %}
+                    {% if user.role == "staff" %}
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="{{ url_for('home_page') }}">Employee</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="{{ url_for('home_page') }}">Equipment</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="{{ url_for('home_page') }}">Operation Theatre</a>
+                    </li>
+                    {% endif %}
+                    {% if user.role == "patient" %}
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="{{ url_for('home_page') }}">History</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="{{ url_for('home_page') }}">Appointment Booking</a>
+                    </li>
+                    {% endif %}
+                    {% if user.login %}
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="{{ url_for('home_page') }}">Log Out</a>
+                    </li>
+                    {% endif %}
                 </ul>
                 <form class="d-flex mx-auto">
                     <a class="btn btn-primary ms-5 me-2 rounded-pill fw-bold" type="submit" href="/courses">Log in</a>
