--- a/templates/doctor.html
+++ b/templates/doctor.html
@@ -1,16 +1,27 @@
 {% extends 'base.html' %} {% block title %}Doctor{% endblock title %} {% block
 body %}
-<div class="container">
-  <div class="card" style="width: 18rem">
-    <div class="card-body">
-      <img src="..." class="card-img-top" alt="..." />
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">
-        Some quick example text to build on the card title and make up the bulk
-        of the card's content.
-      </p>
-      <a href="#" class="btn btn-primary">Go somewhere</a>
-    </div>
-  </div>
+<div id="predictive-model">
+    <div class="container">
+        <div class="card" style="width: 18rem">
+          <div class="card-body">
+            <img src="..." class="card-img-top" alt="..." />
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the bulk
+              of the card's content.
+            </p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+          </div>
+        </div>
+      </div>
+</div>
+<div id="speech-to-text">
+    <p>Speech To Text</p>
+</div>
+<div id="ocr">
+    <p>OCR</p>
+</div>
+<div id="disease-form">
+    <p>Form Here</p>
 </div>
 {% endblock body %}
