--- a/templates/reception.html
+++ b/templates/reception.html
@@ -4,17 +4,13 @@
 {% block title %}Reception{% endblock title %}
 
 {% block body %}
-<div class="container">
-    <div class="card" style="width: 18rem">
-      <div class="card-body">
-        <img src="..." class="card-img-top" alt="..." />
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">
-          Some quick example text to build on the card title and make up the bulk
-          of the card's content.
-        </p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
-      </div>
-    </div>
-  </div>
+<div id="new-patient">
+    <p>Form here</p>
+</div>
+<div id="existing-patient">
+    <p>Form here</p>
+</div>
+<div id="appointments">
+    <p>Appointments</p>
+</div>
 {% endblock body %}
