toggle functionality implemented

--- a/templates/patient.html
+++ b/templates/patient.html
@@ -20,6 +20,6 @@
       {% endfor %}
 </div>
 <div id="book-appointment">
-    <p>Form Here</p>
+    <p>Book appointment</p>
 </div>
 {% endblock body %}
