--- a/templates/reception.html
+++ b/templates/reception.html
@@ -5,10 +5,10 @@
 
 {% block body %}
 <div id="new-patient">
-    <p>Form here</p>
+    <p>New patient</p>
 </div>
 <div id="existing-patient">
-    <p>Form here</p>
+    <p>Existing patients</p>
 </div>
 <div id="appointments">
     <p>Appointments</p>
